package ca.mcmaster.se2aa4.island.team38;

public enum PointOfInterestType {
    CREEK,  // Represents a creek (inlet)
    SITE,   // Represents the emergency site
    BIOME   // Represents a biome (e.g., forest, ocean)
}